[workspace]
members = ["crust-syscall", "crust-restorer"]
resolver = "2"

[package]
name = "crust"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
# Protobuf support for parsing CRIU images
prost = "0.13"
prost-types = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = "0.11"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# System calls
libc = "0.2"
crust-syscall = { path = "crust-syscall" }

[build-dependencies]
# For generating protobuf code from .proto files
prost-build = "0.13"
# For compiling C code
cc = "1.0"

# Workspace-level profile for restorer
[profile.dev]
panic = "abort"           # No unwinding (required for no_std restorer blob)

[profile.release]
opt-level = "z"           # Optimize for size
lto = true                # Link-time optimization for better inlining
codegen-units = 1         # Single codegen unit for maximum inlining
panic = "abort"           # No unwinding
strip = true              # Remove symbols
