[workspace]
members = ["crust-syscall"]
resolver = "2"

[package]
name = "crust"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"

[dependencies]
# Protobuf support for parsing CRIU images
prost = "0.13"
prost-types = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = "0.11"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# System calls
libc = "0.2"
crust-syscall = { path = "crust-syscall" }

[build-dependencies]
prost-build = "0.13"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
